gap fixed

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header{
 .section3{
     width: 1140px;
     height: 300px;
-    margin: 0 auto;
+    margin: 50px auto;
    background: url(./images/gradient2.png),url(./images/watch.png);
    padding: 59px 617px 59px 64px;
 }
